parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__identifiers-5.snap
---
source: parser/src/lexer/mod.rs
description: a_a_
---
[
    Token {
        kind: Identifier,
        value: Str(
            "a_a_",
        ),
        start: 0,
        end: 4,
    },
]
