parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__identifiers-6.snap
---
source: parser/src/lexer/mod.rs
description: ಠ_ಠ
---
[
    Token {
        kind: Identifier,
        value: Str(
            "ಠ_ಠ",
        ),
        start: 0,
        end: 7,
    },
]
