parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__import-0.snap
---
source: parser/src/lexer/mod.rs
description: import a
---
[
    Token {
        kind: Import,
        value: None,
        start: 0,
        end: 6,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 7,
        end: 8,
    },
]
