parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__import-3.snap
---
source: parser/src/lexer/mod.rs
description: import a from b
---
[
    Token {
        kind: Import,
        value: None,
        start: 0,
        end: 6,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 7,
        end: 8,
    },
    Token {
        kind: From,
        value: None,
        start: 9,
        end: 13,
    },
    Token {
        kind: Identifier,
        value: Str(
            "b",
        ),
        start: 14,
        end: 15,
    },
]
