parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__indentation-3.snap
---
source: parser/src/lexer/mod.rs
description: "def f(x):\n    y = z\n\n    print(y)\n"
---
[
    Token {
        kind: Def,
        value: None,
        start: 0,
        end: 3,
    },
    Token {
        kind: Identifier,
        value: Str(
            "f",
        ),
        start: 4,
        end: 5,
    },
    Token {
        kind: LeftParen,
        value: None,
        start: 5,
        end: 6,
    },
    Token {
        kind: Identifier,
        value: Str(
            "x",
        ),
        start: 6,
        end: 7,
    },
    Token {
        kind: RightParen,
        value: None,
        start: 7,
        end: 8,
    },
    Token {
        kind: Colon,
        value: None,
        start: 8,
        end: 9,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 9,
        end: 10,
    },
    Token {
        kind: Indent,
        value: Indent(
            1,
        ),
        start: 10,
        end: 14,
    },
    Token {
        kind: Identifier,
        value: Str(
            "y",
        ),
        start: 14,
        end: 15,
    },
    Token {
        kind: Assign,
        value: None,
        start: 16,
        end: 17,
    },
    Token {
        kind: Identifier,
        value: Str(
            "z",
        ),
        start: 18,
        end: 19,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 19,
        end: 20,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 20,
        end: 21,
    },
    Token {
        kind: Identifier,
        value: Str(
            "print",
        ),
        start: 25,
        end: 30,
    },
    Token {
        kind: LeftParen,
        value: None,
        start: 30,
        end: 31,
    },
    Token {
        kind: Identifier,
        value: Str(
            "y",
        ),
        start: 31,
        end: 32,
    },
    Token {
        kind: RightParen,
        value: None,
        start: 32,
        end: 33,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 33,
        end: 34,
    },
    Token {
        kind: Dedent,
        value: Indent(
            1,
        ),
        start: 34,
        end: 34,
    },
]
